--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -1,6 +1,6 @@
 .category {
     display: flex;
-    margin: 50px;
+    margin:0 50px;
     justify-content: center;
     background-color: #F3EDD7;
 }
