Create a Home component
Create a Home component and routing to it. Create a Link in Header to Home-page.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,7 +10,9 @@
     margin-left: 50px;
     font-size: 20px;
     font-style: italic;
-   
+    color: white;
+    text-decoration: none;
+    
 }
 
 .headerLogo:hover {
