--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -39,4 +39,16 @@
 .button {
    background-color: #E3E3E4;
    padding: 10px 30px;
+   margin-top: 10px;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: springgreen;
+}
+
+.loginTitle {
+    color: white;
+    margin-top: 0;
+    margin-bottom: 50px;
 }
