Create Register Component
Create Register users form and make a footer logo to link to home page.

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,3 +9,14 @@
 .footerLogo {
     margin-right: 50px;
 }
+
+.footerLogoLink {
+    text-decoration: none;
+    color: white;
+}
+
+.footerLogoLink:hover {
+    text-decoration: underline;
+    color: darkgoldenrod;
+    cursor: pointer;
+}
