Make changes in Home-page for showing book covers

--- a/src/components/BookCard/BookCard.module.css
+++ b/src/components/BookCard/BookCard.module.css
@@ -9,9 +9,10 @@
 }
 
 .imageContainer {
-    width: 100%;  
+    width: 60%;  
+    height: 60%;
     display: flex;
-    margin-bottom: 20px;
+    
 }
 
 .image {
