Create Details Component
Create Details Component that holds info about specific book. Implement logic that takes data from database.

--- a/src/components/BookCard/BookCard.module.css
+++ b/src/components/BookCard/BookCard.module.css
@@ -19,6 +19,23 @@
     width: 100%;
 }
 
+.image:hover {
+    transform: scale(1.5);
+}
+
+
 .detailsBtn {
     width: 50%;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding-bottom: 3px;
+    border-radius: 15px;
+}
+
+.detailsBtn:hover {
+    cursor: pointer;
+    background-color: limegreen;
+    color: white;
+    border: 1px solid limegreen;
 }
