Change in HeaderSearchBar component
Create a dynamic button  that clear search bar content. The clear button appears only  if a value is entered in the search field.

--- a/src/components/Search/HeaderSearchBar.module.css
+++ b/src/components/Search/HeaderSearchBar.module.css
@@ -5,6 +5,10 @@
     position: relative;
 }
 
+.searchFieldContainer {
+    display: flex;
+}
+
 .searchField {
     margin-right: 10px;
 }
@@ -58,4 +62,10 @@
 
 .headerSearchLink {
     text-decoration: none;
+}
+
+.closeIcon {
+    position: relative;
+    color: red;
+   
 }
