Customize Form in Upload Component
Add fields for: Author, Title, Review, Book cover URL, and make respectively
to them States that holds fields values.

--- a/src/components/Upload/Upload.module.css
+++ b/src/components/Upload/Upload.module.css
@@ -1,1 +1,36 @@
+.uploadContainer {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    /* margin-top: 20px; */
+    margin-left: 50px;
+}
 
+.form {
+    display: flex;
+    flex-direction: column;
+   
+    
+}
+
+.label {
+    display: flex;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+.input {
+    width: 70%;
+   
+}
+
+.fileField {
+    align-self:flex-end;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.uploadBtn {
+    width: 100px;
+    align-self: center;
+}
