Set a Global State with User object
Create a Helper folder with Context.js where created a global state that must hold information about current Logged-in user.

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -45,8 +45,13 @@
     color: white;
 }
 
-
 .navbar {
     z-index: 1;
     position: relative;
+}
+
+.username {
+    color:lightgray;
+    font-weight: bolder;
+    font-style: italic;
 }
