--- a/src/components/BookCard/BookCard.module.css
+++ b/src/components/BookCard/BookCard.module.css
@@ -31,6 +31,7 @@
     border: 1px solid black;
     padding-bottom: 3px;
     border-radius: 15px;
+    text-align: center;
 }
 
 .detailsBtn:hover {
