Add some Style to Upload component

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -2,5 +2,6 @@
     display: flex;
     min-height: 510px;
     min-width: 1349px;
-    /* justify-content: center; */
+    justify-content: center;
+    
 }
