--- a/src/components/BookDetails/BookDetails.module.css
+++ b/src/components/BookDetails/BookDetails.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+    display: flex;
+    
+}
+
 .details {
     display: flex;
     flex-direction: column;
@@ -6,13 +11,14 @@
 
 .detailsContainer {
     display: flex;
-    min-height: 510px;
-    margin: 100px 200px;
+    max-height: 70%;
+    margin-top: 100px;
     width: 100%;
+    
 }
 
 .imageContainer {
-    max-width: 30%;
+    max-width: 40%;
     min-width: 300px;
 }
 
@@ -21,15 +27,23 @@
 }
 
 .infoContainer {
+    display: flex;
+    flex-direction: column;
     margin-left: 100px;
+    max-width: 800px;
 }
 
 .downloadBtn {
-   min-width: 7%;
-   max-width: 9%;
-   align-self: center;
+   min-width: 100px;
+   max-width: 150px;
    margin-bottom: 50px;
+   margin-top: 20px;
    padding: 20px;
+   text-decoration: none;
+   background-color: #800000;
+   color: white;
+   text-align: center;
+   border-radius: 20px;
 }
 
 .downloadBtn:hover {
@@ -44,4 +58,24 @@
     color: maroon;
 }
 
+.buttonWraper {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    align-items: center;
+    max-width: 30%;
+}
 
+.review {
+    display: flex;
+    flex-direction: column;
+    max-height: 300px;
+    overflow: scroll;
+    max-width: 80%;
+    background-color: #E1DCC5;
+    
+}
+
+.reviewText {
+    padding: 0 20px;
+}
