--- a/src/components/BookDetails/EditBook.module.css
+++ b/src/components/BookDetails/EditBook.module.css
@@ -1,4 +1,27 @@
+.editContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
 .form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    background-color: #333333;
+    padding: 20px;
+    width: 60%;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+
+.label {
+    color:white;
+    margin-bottom: 30px;
+    min-width: 300px;
+}
+
+.input {
+    margin-left: 20px;
 }
