--- a/src/components/Search/HeaderSearchBar.module.css
+++ b/src/components/Search/HeaderSearchBar.module.css
@@ -76,3 +76,10 @@
         padding-right: 50px;
     }
 }
+
+@media screen and (max-width: 450px) {
+    
+    .searchLink {
+        padding: 0;
+    }
+}
