--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
   margin: 0;
   box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App-logo {
@@ -39,3 +41,10 @@
   }
 }
 
+body {
+  width: auto;
+  height: auto;
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
