--- a/src/components/Category/CategoryTitle.module.css
+++ b/src/components/Category/CategoryTitle.module.css
@@ -9,3 +9,11 @@
    transform: scale(1.5);
    cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    
+    .categoryTitle {
+        align-self: center;
+        margin-left: 0;
+    }
+}
