--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -4,5 +4,6 @@
     min-width: 1349px; */
     /* justify-content: center; */
     max-width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
+   
 }
