--- a/src/components/MyBooks/MyBooks.module.css
+++ b/src/components/MyBooks/MyBooks.module.css
@@ -15,3 +15,10 @@
     justify-content: center;
     max-width: 100%;
 }
+
+@media screen and (max-width:600px) {
+    
+    .booksWrapper {
+        padding: 0;
+    }
+}
