--- a/src/components/Upload/Upload.module.css
+++ b/src/components/Upload/Upload.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    margin-left: 50px;
+    margin-left: 12%;
     justify-content: center;
     align-items: center;
     max-height: 100%;
@@ -86,4 +86,26 @@
 
 .genreList:hover {
     cursor: pointer;
+}
+
+@media screen and (max-width: 900px) {
+    
+    .fields {
+        flex-direction: column;
+        width: 70%;
+    }
+
+    .form {
+       align-items: center;
+    }
+
+    .uploadContainer {
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .firstPart, .secondPart {
+        margin-right: 0;
+        width: 80%;
+    }
 }
