1. Changes to BookCard. 2.Changes to BookDetails.
1. If book title is too long (over 25 symbols), then browser shows only 25 symbols of titile + "..."

2. Made BookDetails with responsive design for Phones.

--- a/src/components/BookDetails/BookDetails.module.css
+++ b/src/components/BookDetails/BookDetails.module.css
@@ -1,6 +1,5 @@
 .wrapper {
     display: flex;
-   
 }
 
 .details {
@@ -186,4 +185,20 @@
     color: white;
     background-color: #C40106;
     transform: scale(1.2);
+}
+
+
+@media screen and (max-width: 600px) {
+    
+    .wrapper {
+        margin-bottom: 30px;
+    }
+    .detailsContainer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .leftSide {
+        margin-left: 0;
+    }
 }
