--- a/src/components/Search/HeaderSearchBar.module.css
+++ b/src/components/Search/HeaderSearchBar.module.css
@@ -24,34 +24,31 @@
 }
 
 .dataResult {
-    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+    position: absolute;
+    top: 25px;
     width: 300px;
     height: 200px;
+    margin-top: 5px;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 20px;
     overflow: hidden;
     overflow-y: auto;
-    z-index: 1;
-    position: relative;
+    border-radius: 5px;
 }
 
 .dataResult::-webkit-scrollbar{
     display: none;
 }
 
-.dataResult {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-}
-
 .dataItem {
     margin: 4px;
     color: slategray;
-    width: 100%;
+    width: 300px;
+    text-align: center;
 }
 
 .dataItem:hover {
