Remove scroll bar from BookDetails --> Review. Set some shadow css on different sections in App

--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -3,6 +3,7 @@
     margin:0 50px;
     justify-content: center;
     background-color: #F3EDD7;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 20px;
 }
 
 @media screen and (max-width: 900px) {
