--- a/src/components/BookDetails/BookDetails.module.css
+++ b/src/components/BookDetails/BookDetails.module.css
@@ -23,6 +23,7 @@
 
 .image {
     width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 15px 20px;
 }
 
 .infoContainer {
@@ -109,10 +110,16 @@
     display: flex;
     flex-direction: column;
     max-height: 300px;
-    overflow: scroll;
+    /* overflow: scroll; */
     max-width: 80%;
     background-color: #E1DCC5;
-    
+    overflow: hidden;
+    overflow-y: auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 20px;
+}
+
+.review::-webkit-scrollbar{
+    display: none;
 }
 
 .reviewText {
