--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -22,6 +22,7 @@
     background-color: #333333;
     justify-content: center;
     border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 20px;
 }
 
 .input {
@@ -55,6 +56,3 @@
     margin-bottom: 50px;
 }
 
-/* .errorMessage {
-    color: red;
-} */
