--- a/src/components/Upload/Upload.module.css
+++ b/src/components/Upload/Upload.module.css
@@ -18,7 +18,7 @@
     padding-bottom: 30px;
     border: 1px solid #333333;
     border-radius: 20px;
-    
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 15px 20px;
 }
 
 .fields {
